--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clase 6 GIT</title>
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
     <h1>Bienvenido GIT</h1>
